--- a/src/styles.scss
+++ b/src/styles.scss
@@ -139,6 +139,12 @@ body {
   }
 }
 
+.button-close {
+  background: url("./assets/svg/close-circle.svg");
+  width: 24px;
+  height: 24px;
+}
+
 // hover
 
 .cursor-pointer {
