--- a/src/shared/layout/header/header.component.html
+++ b/src/shared/layout/header/header.component.html
@@ -10,37 +10,7 @@
         </div>
       </div>
 
-      <div class="clock-block white-text">
-        <div class="clock-block__face bg-dark">
-          <div class="clock-block__face-time">00</div>
-          <div class="clock-block__face-text">Days</div>
-        </div>
-        <div class="clock-block__divider">
-          <div class="clock-block__divider-item bg-dark"></div>
-          <div class="clock-block__divider-item bg-dark"></div>
-        </div>
-
-        <div class="clock-block__face bg-dark">
-          <div class="clock-block__face-time">15</div>
-          <div class="clock-block__face-text">Hours</div>
-        </div>
-        <div class="clock-block__divider">
-          <div class="clock-block__divider-item bg-dark"></div>
-          <div class="clock-block__divider-item bg-dark"></div>
-        </div>
-        <div class="clock-block__face bg-dark">
-          <div class="clock-block__face-time">35</div>
-          <div class="clock-block__face-text">Min</div>
-        </div>
-        <div class="clock-block__divider">
-          <div class="clock-block__divider-item bg-dark"></div>
-          <div class="clock-block__divider-item bg-dark"></div>
-        </div>
-        <div class="clock-block__face bg-dark">
-          <div class="clock-block__face-time">48</div>
-          <div class="clock-block__face-text">Sec</div>
-        </div>
-      </div>
+     <smarti-clock-feature></smarti-clock-feature>
 
       <div class="special-header__right">מבצע: חודש ניסיון חינם</div>
     </div>
