change fonts to Rubik

--- a/src/shared/layout/about-layout/about-layout.component.html
+++ b/src/shared/layout/about-layout/about-layout.component.html
@@ -13,14 +13,14 @@
   </div>
   <div class="about-block-forms__item">
     <div class="second-about-form-image"></div>
-    <div class="about-block-forms__item-text">הכנה לטופס 161</div>
+    <div class="about-block-forms__item-text white-text">הכנה לטופס 161</div>
   </div>
   <div class="about-block-forms__item">
     <div class="third-about-form-image"></div>
-    <div class="about-block-forms__item-text">מנהל תיק אישי</div>
+    <div class="about-block-forms__item-text white-text">מנהל תיק אישי</div>
   </div>
   <div class="about-block-forms__item">
     <div class="fourth-about-form-image"></div>
-    <div class="about-block-forms__item-text">ממשק נגיש</div>
+    <div class="about-block-forms__item-text white-text">ממשק נגיש</div>
   </div>
 </div>
