--- a/src/shared/layout/company-slider-layout/company-slider-layout.component.scss
+++ b/src/shared/layout/company-slider-layout/company-slider-layout.component.scss
@@ -23,7 +23,7 @@
 
       &-name {
         font-size: 20px;
-        font-family: FredokaSemiExpandedMedium, sans-serif;
+        font-family: RubikMedium, sans-serif;
         font-style: normal;
         font-weight: 500;
         line-height: 28px;
