--- a/src/shared/layout/connect-now-layout/connect-now-layout.component.html
+++ b/src/shared/layout/connect-now-layout/connect-now-layout.component.html
@@ -1,9 +1,10 @@
 <div>
   <div class="connect-now-block">
     <div class="connect-now-block__text white-text">
-      סמרטי חוסכת לכם זמן וכסף ועוזרת לכם לארגן את קופות הפנסיה והביטוח בארגון<br/>
-      סמרטי במבצע חודש מתנה
+      סמארטי חוסכת לכם זמן וכסף<br/>
+      ועוזרת לכם לארגן את קופות הפנסיה והביטוח בחברה
     </div>
+    <div class="connect-now-block__header white-text"> מבצע! חודש מתנה</div>
     <div class="button-interaction">
       <button class="button-interaction-button white-text bg-pumpkin">הצטרפו עכשיו</button>
     </div>
