--- a/src/shared/layout/employee-management-layout/employee-management-layout.component.html
+++ b/src/shared/layout/employee-management-layout/employee-management-layout.component.html
@@ -3,8 +3,8 @@
     רוצים ליעל את ניהול העובדים שלכם?
   </div>
   <div class="smarti-describing-text white-text">
-    קבלו את כל הכלים המתאימים שיאפשרו לכם זאת.<br/>
-    ניהולי משאבי אנוש בתהליכים דיגיטליים מתקדמים ביותר
+    כל הכלים המתאימים שיאפשרו לכם זאת<br/>
+    ניהול משאבי אנוש בתהליכים דיגיטליים מתקדמים ביותר
   </div>
   <div class="employee-management">
     <div class="employee-management__left">
