--- a/src/shared/layout/employee-management-layout/employee-management-layout.component.scss
+++ b/src/shared/layout/employee-management-layout/employee-management-layout.component.scss
@@ -26,7 +26,7 @@
       &-text {
         text-align: start;
         font-size: 24px;
-        font-family: FredokaSemiExpandedMedium, sans-serif;
+        font-family: RubikMedium, sans-serif;
         font-style: normal;
         font-weight: 500;
         line-height: 32px;
