--- a/src/shared/layout/footer/footer.component.scss
+++ b/src/shared/layout/footer/footer.component.scss
@@ -24,7 +24,7 @@
     &__header {
       text-align: end;
       font-size: 24px;
-      font-family: FredokaSemiExpandedMedium, sans-serif;
+      font-family: RubikMedium, sans-serif;
       font-style: normal;
       font-weight: 500;
       line-height: 32px;
@@ -33,7 +33,7 @@
     &__text {
       text-align: end;
       font-size: 16px;
-      font-family: FredokaSemiExpandedMedium, sans-serif;
+      font-family: RubikMedium, sans-serif;
       font-style: normal;
       font-weight: 400;
       line-height: 24px;
