--- a/src/shared/layout/header/header.component.scss
+++ b/src/shared/layout/header/header.component.scss
@@ -13,7 +13,7 @@
 
   &__right {
     font-size: 24px;
-    font-family: FredokaSemiExpandedMedium, sans-serif;
+    font-family: RubikMedium, sans-serif;
     font-style: normal;
     font-weight: 500;
     line-height: 32px;
@@ -43,7 +43,7 @@
 
   &__text {
     font-size: 16px;
-    font-family: FredokaSemiExpandedMedium, sans-serif;
+    font-family: RubikMedium, sans-serif;
     font-style: normal;
     font-weight: 500;
     line-height: 18px;
@@ -68,7 +68,7 @@
     align-self: center;
     margin: 0 40px;
     font-size: 16px;
-    font-family: FredokaSemiExpandedMedium, sans-serif;
+    font-family: RubikMedium, sans-serif;
     font-style: normal;
     font-weight: 500;
     line-height: 24px;
@@ -86,7 +86,7 @@
     justify-content: center;
     align-items: center;
     font-size: 16px;
-    font-family: FredokaSemiExpandedMedium, sans-serif;
+    font-family: RubikMedium, sans-serif;
     font-style: normal;
     font-weight: 500;
     line-height: 18px;
@@ -101,7 +101,7 @@
     justify-content: center;
     align-items: center;
     font-size: 16px;
-    font-family: FredokaSemiExpandedMedium, sans-serif;
+    font-family: RubikMedium, sans-serif;
     font-style: normal;
     font-weight: 500;
     line-height: 18px;
