--- a/src/shared/layout/main-banner-layout/main-banner-layout.component.scss
+++ b/src/shared/layout/main-banner-layout/main-banner-layout.component.scss
@@ -13,7 +13,7 @@
     &__text {
       text-align: center;
       font-size: 64px;
-      font-family: FredokaSemiExpandedMedium, sans-serif;
+      font-family: RubikMedium, sans-serif;
       font-style: normal;
       font-weight: 500;
       line-height: 68px;
@@ -27,7 +27,7 @@
       &-button {
         padding: 12px 32px;
         font-size: 16px;
-        font-family: FredokaSemiExpandedMedium, sans-serif;
+        font-family: RubikMedium, sans-serif;
         font-style: normal;
         font-weight: 500;
         line-height: 18px;
@@ -40,7 +40,7 @@
         overflow: hidden;
         text-overflow: ellipsis;
         font-size: 16px;
-        font-family: FredokaSemiExpandedMedium, sans-serif;
+        font-family: RubikMedium, sans-serif;
         font-style: normal;
         font-weight: 500;
         line-height: 24px;
