--- a/src/shared/layout/run-business-layout/run-business-layout.component.html
+++ b/src/shared/layout/run-business-layout/run-business-layout.component.html
@@ -7,8 +7,8 @@
         שלכם חכם ומהיר
       </div>
       <div class="run-business__block__right-text white-text">
-        סמרטי כאן בממשק נגיש שעוזר לכם לנהל את סליקה הפנסיונית בצורה<br/>
-        פשוטה ומהירה בכמה צעדים פשוטים
+        ממשק נגיש שעוזר לכם לנהל את סליקה הפנסיונית<br/>
+        בצורה פשוטה ומהירה בכמה צעדים פשוטים
       </div>
       <div class="button-interaction">
         <button class="button-interaction-button white-text bg-pumpkin">
