--- a/src/shared/layout/run-business-layout/run-business-layout.component.scss
+++ b/src/shared/layout/run-business-layout/run-business-layout.component.scss
@@ -32,7 +32,7 @@
         margin-top: 55px;
         text-align: center;
         font-size: 44px;
-        font-family: FredokaSemiExpandedMedium, sans-serif;
+        font-family: RubikMedium, sans-serif;
         font-style: normal;
         font-weight: 500;
         line-height: 48px;
@@ -41,10 +41,11 @@
       &-text {
         text-align: center;
         font-size: 24px;
-        font-family: FredokaSemiExpandedMedium, sans-serif;
+        font-family: RubikMedium, sans-serif;
         font-style: normal;
         font-weight: 500;
         line-height: 32px;
+        margin-bottom: 24px;
       }
     }
   }
