--- a/src/shared/layout/start-day-with-smart-layouti/start-day-with-smarti-layout.component.scss
+++ b/src/shared/layout/start-day-with-smart-layouti/start-day-with-smarti-layout.component.scss
@@ -41,7 +41,7 @@
         &-header {
           text-align: start;
           font-size: 32px;
-          font-family: FredokaSemiExpandedMedium, sans-serif;
+          font-family: RubikMedium, sans-serif;
           font-style: normal;
           font-weight: 500;
           line-height: 40px;
@@ -52,7 +52,7 @@
           word-wrap: normal;
           margin-top: 16px;
           font-size: 24px;
-          font-family: FredokaSemiExpandedMedium, sans-serif;
+          font-family: RubikMedium, sans-serif;
           font-style: normal;
           font-weight: 400;
           line-height: 32px;
