--- a/src/features/clock-feature/clock-feature.component.scss
+++ b/src/features/clock-feature/clock-feature.component.scss
@@ -14,7 +14,7 @@
       width: fit-content;
       margin: 6px auto 0;
       font-size: 24px;
-      font-family: FredokaSemiExpandedMedium, sans-serif;
+      font-family: RubikMedium, sans-serif;
       font-style: normal;
       font-weight: 500;
       line-height: 32px;
@@ -23,7 +23,7 @@
     &-text {
       margin: 0 auto;
       font-size: 12px;
-      font-family: FredokaSemiExpandedMedium, sans-serif;
+      font-family: RubikMedium, sans-serif;
       font-style: normal;
       font-weight: 500;
       line-height: 14px;
