--- a/src/shared/layout/about-layout/about-layout.component.scss
+++ b/src/shared/layout/about-layout/about-layout.component.scss
@@ -10,7 +10,7 @@
       margin-top: 8px;
       text-align: center;
       font-size: 24px;
-      font-family: FredokaSemiExpandedMedium, sans-serif;
+      font-family: RubikMedium, sans-serif;
       font-style: normal;
       font-weight: 500;
       line-height: 32px;
