--- a/src/shared/layout/blog-layout/blog-layout.component.scss
+++ b/src/shared/layout/blog-layout/blog-layout.component.scss
@@ -21,7 +21,7 @@
       margin: 16px;
       text-align: start;
       font-size: 32px;
-      font-family: FredokaSemiExpandedMedium, sans-serif;
+      font-family: RubikMedium, sans-serif;
       font-style: normal;
       font-weight: 500;
       line-height: 40px;
@@ -31,7 +31,7 @@
     &-button {
       text-align: center;
       font-size: 24px;
-      font-family: FredokaSemiExpandedMedium, sans-serif;
+      font-family: RubikMedium, sans-serif;
       font-style: normal;
       font-weight: 500;
       line-height: 32px;
