--- a/src/shared/layout/questions-banner-layout/questions-banner-layout.component.scss
+++ b/src/shared/layout/questions-banner-layout/questions-banner-layout.component.scss
@@ -8,7 +8,7 @@
   &__text {
     text-align: center;
     font-size: 32px;
-    font-family: FredokaSemiExpandedMedium, sans-serif;
+    font-family: RubikMedium, sans-serif;
     font-style: normal;
     font-weight: 500;
     line-height: 40px;
