--- a/src/shared/popup/main-layout-popup/main-layout-popup.component.scss
+++ b/src/shared/popup/main-layout-popup/main-layout-popup.component.scss
@@ -8,7 +8,7 @@
   &__header {
     text-align: center;
     font-size: 24px;
-    font-family: FredokaSemiExpandedMedium, sans-serif;
+    font-family: RubikMedium, sans-serif;
     font-style: normal;
     font-weight: 500;
     line-height: 32px;
@@ -18,7 +18,7 @@
   &__text {
     text-align: center;
     font-size: 16px;
-    font-family: FredokaSemiExpandedMedium, sans-serif;
+    font-family: RubikMedium, sans-serif;
     font-style: normal;
     font-weight: 500;
     line-height: 24px;
@@ -41,7 +41,7 @@
   &__header {
     text-align: center;
     font-size: 24px;
-    font-family: FredokaSemiExpandedMedium, sans-serif;
+    font-family: RubikMedium, sans-serif;
     font-style: normal;
     font-weight: 500;
     line-height: 32px;
@@ -50,7 +50,7 @@
   &__text {
     text-align: center;
     font-size: 16px;
-    font-family: FredokaSemiExpandedMedium, sans-serif;
+    font-family: RubikMedium, sans-serif;
     font-style: normal;
     font-weight: 500;
     line-height: 24px;
