--- a/src/styles.scss
+++ b/src/styles.scss
@@ -100,7 +100,7 @@ body {
 .smarti-heading-text {
   text-align: center;
   font-size: 44px;
-  font-family: FredokaSemiExpandedMedium, sans-serif;
+  font-family: RubikMedium, sans-serif;
   font-style: normal;
   font-weight: 500;
   line-height: 48px;
@@ -110,7 +110,7 @@ body {
 .smarti-describing-text {
   text-align: center;
   font-size: 24px;
-  font-family: FredokaSemiExpandedMedium, sans-serif;
+  font-family: RubikMedium, sans-serif;
   font-style: normal;
   font-weight: 500;
   line-height: 32px;
@@ -129,7 +129,7 @@ body {
     border-radius: 8px;
     text-align: center;
     font-size: 20px;
-    font-family: FredokaSemiExpandedMedium, sans-serif;
+    font-family: RubikMedium, sans-serif;
     font-style: normal;
     font-weight: 500;
     line-height: 24px;
