--- a/src/pages/landing/landing.component.html
+++ b/src/pages/landing/landing.component.html
@@ -1,4 +1,4 @@
-<section appScrollManager>
+<section appScrollManager class="bg-dark">
   <smarti-header></smarti-header>
   <smarti-landing-layout></smarti-landing-layout>
   <smarti-footer></smarti-footer>
