--- a/src/pages/registration/registration.component.scss
+++ b/src/pages/registration/registration.component.scss
@@ -12,6 +12,12 @@
       height: 160px;
     }
 
+    &__left-new {
+      background: url("../../assets/svg/work-with-documents.svg");
+      width: 218px;
+      height: 160px;
+    }
+
     &__right {
       text-align: right;
       font-family: RubikMedium, sans-serif;
