add third step to registration form, add taiga-ui, add logic between steps and rewrite inputs, select, date-picker

--- a/src/features/progress-bar/progress-bar.component.html
+++ b/src/features/progress-bar/progress-bar.component.html
@@ -4,43 +4,43 @@
   </div>
   <div class="progress-bar__content">
     <div
-      [ngClass]="progressObj.ten === 'fill' ? 'progress-bar__content__item-fill' : 'progress-bar__content__item'"
+      [ngClass]="counter.ten === 'fill' ? 'progress-bar__content__item-fill' : 'progress-bar__content__item'"
       class="left-side-progress-bar"
     ></div>
     <div
-      [ngClass]="progressObj.nine === 'fill' ? 'progress-bar__content__item-fill' : 'progress-bar__content__item'"
+      [ngClass]="counter.nine === 'fill' ? 'progress-bar__content__item-fill' : 'progress-bar__content__item'"
       class="progress-bar__content__item"
     ></div>
     <div
-      [ngClass]="progressObj.eight === 'fill' ? 'progress-bar__content__item-fill' : 'progress-bar__content__item'"
+      [ngClass]="counter.eight === 'fill' ? 'progress-bar__content__item-fill' : 'progress-bar__content__item'"
       class="progress-bar__content__item"
     ></div>
     <div
-      [ngClass]="progressObj.seven === 'fill' ? 'progress-bar__content__item-fill' : 'progress-bar__content__item'"
+      [ngClass]="counter.seven === 'fill' ? 'progress-bar__content__item-fill' : 'progress-bar__content__item'"
       class="progress-bar__content__item"
     ></div>
     <div
-      [ngClass]="progressObj.six === 'fill' ? 'progress-bar__content__item-fill' : 'progress-bar__content__item'"
+      [ngClass]="counter.six === 'fill' ? 'progress-bar__content__item-fill' : 'progress-bar__content__item'"
       class="progress-bar__content__item"
     ></div>
     <div
-      [ngClass]="progressObj.five === 'fill' ? 'progress-bar__content__item-fill' : 'progress-bar__content__item'"
+      [ngClass]="counter.five === 'fill' ? 'progress-bar__content__item-fill' : 'progress-bar__content__item'"
       class="progress-bar__content__item"
     ></div>
     <div
-      [ngClass]="progressObj.four === 'fill' ? 'progress-bar__content__item-fill' : 'progress-bar__content__item'"
+      [ngClass]="counter.four === 'fill' ? 'progress-bar__content__item-fill' : 'progress-bar__content__item'"
       class="progress-bar__content__item"
     ></div>
     <div
-      [ngClass]="progressObj.three === 'fill' ? 'progress-bar__content__item-fill' : 'progress-bar__content__item'"
+      [ngClass]="counter.three === 'fill' ? 'progress-bar__content__item-fill' : 'progress-bar__content__item'"
       class="progress-bar__content__item"
     ></div>
     <div
-      [ngClass]="progressObj.two === 'fill' ? 'progress-bar__content__item-fill' : 'progress-bar__content__item'"
+      [ngClass]="counter.two === 'fill' ? 'progress-bar__content__item-fill' : 'progress-bar__content__item'"
       class="progress-bar__content__item"
     ></div>
     <div
-      [ngClass]="progressObj.one === 'fill' ? 'progress-bar__content__item-fill' : 'progress-bar__content__item'"
+      [ngClass]="counter.one === 'fill' ? 'progress-bar__content__item-fill' : 'progress-bar__content__item'"
       class="progress-bar__content__item-fill right-side-progress-bar"
     ></div>
   </div>
