--- a/src/features/registration-form/form-container/personal-info/personal-info.component.html
+++ b/src/features/registration-form/form-container/personal-info/personal-info.component.html
@@ -2,42 +2,37 @@
   <div class="personal-info__header dark-text">Create account fast and easy!</div>
   <div class="personal-info__item">
     <smarti-input-field
-      [customClass]="'input-text'"
+      [customWidth]="'536px'"
       [placeholder]="'Company name*'"
       [type]="'text'"
-      [minLength]="1"
     ></smarti-input-field>
   </div>
   <div class="personal-info__item">
     <smarti-input-field
-      [customClass]="'input-text'"
+      [customWidth]="'536px'"
       [placeholder]="'Company ID*'"
       [type]="'text'"
-      [minLength]="1"
     ></smarti-input-field>
   </div>
   <div class="personal-info__item">
     <smarti-input-field
-      [customClass]="'input-text'"
+      [customWidth]="'536px'"
       [placeholder]="'Your Name'"
       [type]="'text'"
-      [minLength]="1"
     ></smarti-input-field>
   </div>
   <div class="personal-info__item">
     <smarti-input-field
       [placeholder]="'Email Address*'"
-      [customClass]="'input-text'"
+      [customWidth]="'536px'"
       [type]="'text'"
-      [minLength]="1"
     ></smarti-input-field>
   </div>
   <div class="personal-info__item">
     <smarti-input-field
-      [customClass]="'input-text'"
+      [customWidth]="'536px'"
       [placeholder]="'Phone Number*'"
       [type]="'text'"
-      [minLength]="1"
     ></smarti-input-field>
   </div>
   <div class="personal-info__item flex gap-4">
