--- a/src/features/registration-form/form-container/select-year-and-month/select-year-and-month.component.scss
+++ b/src/features/registration-form/form-container/select-year-and-month/select-year-and-month.component.scss
@@ -1,4 +1,4 @@
-.personal-info {
+.year-and-month-info {
   display: flex;
   flex-direction: column;
   margin-top: 40px;
@@ -13,6 +13,24 @@
     line-height: 40px;
     margin-top: 40px;
   }
+
+  &__item {
+    margin-top: 32px;
+
+    &-text {
+      overflow: hidden;
+      text-align: right;
+      text-overflow: ellipsis;
+      font-family: RubikMedium, sans-serif;
+      font-size: 16px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 24px;
+      width: 377px;
+      height: 48px;
+    }
+  }
+
   &__button-block {
     margin-top: 40px;
     margin-bottom: 64px;
