--- a/src/shared/ui/input-field/input-field.component.html
+++ b/src/shared/ui/input-field/input-field.component.html
@@ -1,10 +1,17 @@
-<div>
-  <input
-    [ngClass]="customClass"
-    [type]="type"
-    [placeholder]="placeholder"
-    [required]="isRequired"
-    [formControl]="formInput"
-    [minlength]="minLength"
-  />
-</div>
+<form
+  class="b-form"
+  [formGroup]="formInput"
+>
+  <tui-input
+    tuiTextfieldSize="m"
+    formControlName="inputValue"
+    [tuiTextfieldLabelOutside]="true"
+    [style.width]="customWidth"
+  >
+    {{ placeholder }}
+    <input
+      tuiTextfield
+      type="{{ type }}"
+    />
+  </tui-input>
+</form>
