--- a/src/features/registration-form/form-container/select-year-and-month/select-year-and-month.component.html
+++ b/src/features/registration-form/form-container/select-year-and-month/select-year-and-month.component.html
@@ -20,7 +20,7 @@
   </div>
   <div class="year-and-month-info__button-block">
     <button
-      class="year-and-month-info__button-block__button"
+      class="confirm-button"
       type="submit"
       (click)="doChangeStep('forward')"
     >Confirm</button>
