--- a/src/shared/layout/registration-layout/registration-footer/registration-footer.component.html
+++ b/src/shared/layout/registration-layout/registration-footer/registration-footer.component.html
@@ -1,5 +1,5 @@
 <div class="registration-footer">
-  <div class="registration-footer__left">
+  <div class="registration-footer__left cursor-pointer">
     Skip it for now
   </div>
   <div class="registration-footer__right">
