--- a/src/assets/styles/buttons.scss
+++ b/src/assets/styles/buttons.scss
@@ -23,3 +23,22 @@
   width: 24px;
   height: 24px;
 }
+
+
+.confirm-button {
+  width: 242px;
+  height: 56px;
+  border-radius: 8px;
+  background: #02CAB3;
+  border-color: #02CAB3;
+
+  color: #FFF;
+  text-align: center;
+  font-family: RubikMedium, sans-serif;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 24px;
+  letter-spacing: 0.4px;
+  cursor: pointer;
+}
