add contact page, add ui expand component, add redirect to main page from all headers fix styles

--- a/src/shared/layout/header-auth-layout/header-auth-layout.component.html
+++ b/src/shared/layout/header-auth-layout/header-auth-layout.component.html
@@ -9,11 +9,17 @@
       (click)="navigateToRegistrationPage()"
     >{{ leftBlockClickedText }}</span>
   </h4>
-  <div class="auth-header__img"></div>
+  <div
+    class="auth-header__img cursor-pointer"
+    (click)="navigateToMainPage()"
+  ></div>
 </div>
 
 <ng-template #onlyLogoTemplate>
   <div class="auth-header flex justify-end">
-    <div class="auth-header__img"></div>
+    <div
+      class="auth-header__img"
+      (click)="navigateToMainPage()"
+    ></div>
   </div>
 </ng-template>
