--- a/src/assets/styles/box-shadows.scss
+++ b/src/assets/styles/box-shadows.scss
@@ -1,3 +1,7 @@
 .box-shadow-big {
   box-shadow: 4px 16px 40px 2px rgba(99, 118, 148, 0.24);
 }
+
+.box-shadow-regular {
+  box-shadow: 0 8px 24px 0 rgba(99, 118, 148, 0.16);
+}
