--- a/src/assets/styles/flex.scss
+++ b/src/assets/styles/flex.scss
@@ -26,6 +26,15 @@
   justify-content: space-evenly;
 }
 
+.break {
+  flex-basis: 100%;
+  height: 0;
+}
+
+.wrap {
+  flex-wrap: wrap;
+}
+
 /* gaps */
 .gap-1 {
   gap: 4px;
