--- a/src/assets/styles/margins.scss
+++ b/src/assets/styles/margins.scss
@@ -120,10 +120,22 @@
   margin-bottom: 128px;
 }
 
+.mb-34 {
+  margin-bottom: 136px;
+}
+
+.mb-39 {
+  margin-bottom: 154px;
+}
+
 /* margin-right */
 
 .mr-0 {
   margin-right: 0;
+}
+
+.mr-6 {
+  margin-right: 24px;
 }
 
 .mr-8 {
@@ -143,6 +155,10 @@
 }
 
 /* margin-left */
+
+.ml-6 {
+  margin-left: 24px;
+}
 
 .ml-20 {
   margin-left: 80px;
