fix bugs and styles, add validators on button login and corrected the layout of the main page according to the design

--- a/src/assets/styles/dialogs.scss
+++ b/src/assets/styles/dialogs.scss
@@ -7,6 +7,10 @@ tui-dialog{
   }
 }
 
+tui-dialog[data-size='m'] {
+  width: 814px!important;
+}
+
 .close-dialog {
   background: url("/assets/svg/close-cross.svg");
   width: 24px;
