--- a/src/features/registration-form/form-container/personal-info/personal-info.component.html
+++ b/src/features/registration-form/form-container/personal-info/personal-info.component.html
@@ -44,8 +44,8 @@
   </div>
   <div class="personal-info mt-8 flex gap-4">
     <div class="personal-info__text paragraph-text-medium text-right neutrals-text-950 margin-left-160">
-      I have read and agree to the Smarti<br/>
-      Terms of Services and Privacy Policy.
+      <div>I have read and agree to the Smarti</div>
+      <div>Terms of Services and Privacy Policy.</div>
     </div>
     <smarti-input-checkbox
       [control]="personalInfoForm.controls.acceptPrivacy"
