--- a/src/features/registration-form/form-container/select-year-and-month/select-year-and-month.component.html
+++ b/src/features/registration-form/form-container/select-year-and-month/select-year-and-month.component.html
@@ -1,7 +1,7 @@
 <div class="mt-10 flex flex-col items-center">
   <h3 class="medium mt-10 mb-0 text-center neutrals-text-950">
-    Please select the year and month for which you<br/>
-    want to make a transaction
+    <div>Please select the year and month for which you</div>
+    <div>want to make a transaction</div>
   </h3>
   <div class="flex gap-4 mt-10">
     <smarti-select
