--- a/src/features/reset-password-form/form-container-reset-password/set-new-password/set-new-password.component.html
+++ b/src/features/reset-password-form/form-container-reset-password/set-new-password/set-new-password.component.html
@@ -31,8 +31,10 @@
 >
   <smarti-success-dialog
     [observer]="observer"
-    [headerText]="'Your password has been<br/>successfully reset'"
-    [descriptionText]="'Your password has been reset,<br/>use new password to Log In into the Smarti panel'"
+    [headerText]="'Your password has been successfully reset'"
+    [customHeaderHeight]="'391px'"
+    [customDescriptionHeight]="'457px'"
+    [descriptionText]="'Your password has been reset, use new password to Log In into the Smarti panel'"
     [buttonText]="'Log In'"
     [redirectLink]="'/login'"
   ></smarti-success-dialog>
