--- a/src/pages/login/login.component.html
+++ b/src/pages/login/login.component.html
@@ -9,8 +9,8 @@
     <div class="flex justify-between">
       <div class="seated-working-woman-img"></div>
       <h1 class="medium text-right self-center neutrals-text-950">
-        Welcome back In to<br/>
-        Smarti Panel
+        <div>Welcome back In to</div>
+        <div>Smarti Panel</div>
       </h1>
     </div>
     <smarti-login-form></smarti-login-form>
