--- a/src/shared/dialog/forward-request-dialog/forward-request-dialog.component.html
+++ b/src/shared/dialog/forward-request-dialog/forward-request-dialog.component.html
@@ -1,6 +1,6 @@
 <div class="mt-14 mb-16 margin-0-auto">
-  <h3 class="medium neutrals-text-950 text-center">
-    Forward a request to a person<br/>
+  <h3 class="medium neutrals-text-950 text-center forward-request-header margin-rl-auto">
+    Forward a request to a person
     in your organization who have it
   </h3>
   <div class="flex flex-col items-center mt-14 gap-8">
