--- a/src/shared/layout/landing-layout/blog-layout/blog-layout.component.html
+++ b/src/shared/layout/landing-layout/blog-layout/blog-layout.component.html
@@ -12,10 +12,8 @@
       <h3 class="medium dir-rtl blog__item__text neutrals-text-950">
         Pension, insurance in simple words
       </h3>
-      <h4
-        class="medium flex gap-4 items-center mt-2 margin-start-4 bright-turquoise-text-500"
-      >
-        <div class="icon-arrow-left-fill"></div> קרא עוד
+      <h4 class="dir-rtl medium mt-2 text-end ml-5 bright-turquoise-text-500 cursor-pointer">
+        בקרוב...
       </h4>
     </div>
 
@@ -24,10 +22,8 @@
       <h3 class="medium dir-rtl blog__item__text neutrals-text-950">
         Advantages of technological systems
       </h3>
-      <h4
-        class="medium flex gap-4 items-center mt-2 margin-start-4 bright-turquoise-text-500"
-      >
-        <div class="icon-arrow-left-fill"></div> קרא עוד
+      <h4 class="dir-rtl medium mt-2 text-end ml-5 bright-turquoise-text-500 cursor-pointer">
+        בקרוב...
       </h4>
     </div>
 
@@ -36,10 +32,8 @@
       <h3 class="medium dir-rtl blog__item__text neutrals-text-950">
         Setting out on your own?
       </h3>
-      <h4
-        class="medium flex gap-4 items-center mt-2 margin-start-4 bright-turquoise-text-500"
-      >
-        <div class="icon-arrow-left-fill"></div> קרא עוד
+      <h4 class="dir-rtl medium mt-2 text-end ml-5 bright-turquoise-text-500 cursor-pointer">
+        בקרוב...
       </h4>
     </div>
   </div>
