--- a/src/shared/layout/landing-layout/connect-now-layout/connect-now-layout.component.html
+++ b/src/shared/layout/landing-layout/connect-now-layout/connect-now-layout.component.html
@@ -1,8 +1,8 @@
 <div>
   <div class="connect-now-block flex flex-col items-center justify-center rounded-l">
     <h3 class="connect-now-block__text-block text-center white-text">
-      סמארטי חוסכת לכם זמן וכסף<br/>
-      ועוזרת לכם לארגן את קופות הפנסיה והביטוח בחברה
+      <div>סמארטי חוסכת לכם זמן וכסף</div>
+      <div>ועוזרת לכם לארגן את קופות הפנסיה והביטוח בחברה</div>
     </h3>
     <h3 class="medium text-center mt-8 mb-8 white-text"> מבצע! חודש מתנה</h3>
     <smarti-button
