--- a/src/shared/layout/landing-layout/main-banner-layout/main-banner-layout.component.html
+++ b/src/shared/layout/landing-layout/main-banner-layout/main-banner-layout.component.html
@@ -2,8 +2,8 @@
   <div class="main-banner flex justify-center items-center">
     <div class="main-banner__block">
       <div class="main-banner__block__text text-center display-text white-text">
-        פתאום זה קל לנהל מספר
-        פנסיות ספקים לעובדים
+        סליקה פנסיונית חכמה דואגים
+        לשקט שלך
       </div>
       <div class="main-banner__block__interaction">
         <smarti-button
