--- a/src/shared/ui/input-password/input-password.component.html
+++ b/src/shared/ui/input-password/input-password.component.html
@@ -1,17 +1,12 @@
-<form
-    class="b-form"
-    [formGroup]="formInputPassword"
-  >
-  <tui-input-password
-    formControlName="inputValue"
-    tuiTextfieldSize="m"
-    [tuiTextfieldLabelOutside]="true"
-    [style.width]="customWidth"
-  >
-    {{ placeholder }}
-    <input
-      tuiTextfield
-      (keyup)="onValidatePasswordValue()"
-    />
-  </tui-input-password>
-</form>
+<tui-input-password
+  tuiTextfieldSize="m"
+  [formControl]="control"
+  [tuiTextfieldLabelOutside]="true"
+  [style.width]="customWidth"
+>
+  {{ placeholder }}
+  <input
+    tuiTextfield
+    (keyup)="onValidatePasswordValue()"
+  />
+</tui-input-password>
