--- a/src/assets/styles/text.scss
+++ b/src/assets/styles/text.scss
@@ -2,6 +2,10 @@
   text-align: center;
 }
 
+.text-end {
+  text-align: end;
+}
+
 .text-right {
   text-align: right;
 }
@@ -42,7 +46,7 @@
 }
 
 .display-text {
-  font-family: RubikMedium, sans-serif;
+  font-family: Rubik, sans-serif;
   font-size: 64px;
   font-style: normal;
   font-weight: 700;
