--- a/src/pages/registration/registration.component.html
+++ b/src/pages/registration/registration.component.html
@@ -18,8 +18,8 @@
         }"
       ></div>
       <h1 class="medium text-right self-center neutrals-text-950">
-        תודה שבחרתם<br/>
-        Smarti
+        <div>תודה שבחרתם</div>
+        <div>Smarti</div>
       </h1>
     </div>
     <smarti-registration-form
