--- a/src/shared/dialog/success-dialog/success-dialog.component.html
+++ b/src/shared/dialog/success-dialog/success-dialog.component.html
@@ -1,12 +1,14 @@
 <div class="mt-14 margin-rl-auto">
   <h3
-    class="medium neutrals-text-950 text-center"
+    class="medium neutrals-text-950 text-center margin-rl-auto"
+    [style.width]="customHeaderHeight"
     [innerHTML]="headerText"
   ></h3>
   <div class="success-icon mt-7 margin-rl-auto"></div>
   <div
-    class="regular-text neutrals-text-950 text-center"
+    class="regular-text neutrals-text-950 text-center margin-rl-auto"
     [innerHTML]="descriptionText"
+    [style.width]="customDescriptionHeight"
   ></div>
   <div class="flex justify-center mt-32 mb-16">
     <smarti-button
