--- a/src/shared/layout/landing-layout/about-layout/about-layout.component.html
+++ b/src/shared/layout/landing-layout/about-layout/about-layout.component.html
@@ -1,8 +1,8 @@
 <div class="margin-0-auto" appScrollSection="about">
   <div class="smarti-heading-text bright-turquoise-text-500">אודות Smarti</div>
   <div class="smarti-describing-text white-text">
-    בית תוכנה המתמחה בפתרונות סליקה<br/>
-    פנסיונית ממשק ישיר מול חברות הביטוח, שירות ישיר זמין ואישי
+    <div>בית תוכנה המתמחה בפתרונות סליקה</div>
+    <div>פנסיונית ממשק ישיר מול חברות הביטוח, שירות ישיר זמין ואישי</div>
   </div>
 </div>
 
