--- a/src/shared/layout/landing-layout/employee-management-layout/employee-management-layout.component.html
+++ b/src/shared/layout/landing-layout/employee-management-layout/employee-management-layout.component.html
@@ -3,8 +3,8 @@
     רוצים ליעל את ניהול העובדים שלכם?
   </div>
   <div class="smarti-describing-text white-text">
-    כל הכלים המתאימים שיאפשרו לכם זאת<br/>
-    ניהול משאבי אנוש בתהליכים דיגיטליים מתקדמים ביותר
+    <div>קבלו את כל הכלים המתאימים שיאפשרו לכם זאת.</div>
+    <div>ניהולי משאבי אנוש בתהליכים דיגיטליים מתקדמים ביותר</div>
   </div>
   <div class="flex justify-center gap-171px">
     <div class="employee-management-left">
@@ -16,7 +16,7 @@
         <div class="employee-management-left__item__button flex justify-center rounded-m bg-pumpkin-400">
           <div class="icon-arrow-left-top"></div>
         </div>
-        <h4 class="employee-management-left__item__text rtl medium white-text">
+        <h4 class="employee-management-left__item__text dir-rtl medium white-text">
           שליחת טפסי 101 ישירות לעובדים לנייד
         </h4>
       </div>
@@ -28,7 +28,7 @@
         <div class="employee-management-left__item__button flex justify-center rounded-m bg-pumpkin-400">
           <div class="icon-arrow-left-top"></div>
         </div>
-        <h4 class="employee-management-left__item__text rtl medium white-text">
+        <h4 class="employee-management-left__item__text dir-rtl medium white-text">
           אפשרות לעובדים לבחור מוצרים פנסיונים
         </h4>
       </div>
@@ -40,7 +40,7 @@
         <div class="employee-management-left__item__button flex justify-center rounded-m bg-pumpkin-400">
           <div class="icon-arrow-left-top"></div>
         </div>
-        <h4 class="employee-management-left__item__text rtl medium white-text">
+        <h4 class="employee-management-left__item__text dir-rtl medium white-text">
           העלאת תלושי שכר לכלל העובדים
         </h4>
       </div>
