--- a/src/shared/layout/landing-layout/footer/footer.component.html
+++ b/src/shared/layout/landing-layout/footer/footer.component.html
@@ -9,8 +9,8 @@
     <div class="footer__info-item">
       <h4 class="medium dir-rtl white-text mt-0 mb-0">צרו קשר</h4>
       <div class="paragraph-text dir-rtl white-text mt-6">
-        03-6549300 | 03-5228825<br/>
-        office@smarti.com
+        <div>03-6549300 | 03-5228825</div>
+        <div>office@smarti.com</div>
       </div>
     </div>
     <div class="footer__info-item">
