--- a/src/shared/ui/notification/notification.component.html
+++ b/src/shared/ui/notification/notification.component.html
@@ -8,7 +8,7 @@
   >{{ header }}</div>
   <div class="flex justify-end gap-4 mr-8">
     <div
-      class="text-right paragraph-text dir-rtl neutrals-text-950"
+      class="text-right paragraph-text dir-rtl neutrals-text-950 notification__description"
       [innerHTML]="description"
     ></div>
     <div class="notification__icon"></div>
